Fix sticky footer layout issue and apply consistent layout structure

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,7 @@ body{
   flex-direction: column;
   min-height: 100vh;
 }
+
 .container{
     flex: 1;
 }
@@ -87,4 +88,18 @@ body{
 .add-btn{
     background-color: #fe424d!important;
     border: none!important;
+}
+
+/* Show page */
+
+.show-img{
+    height: 30vh;
+}
+
+.btns{
+    display: flex;
+}
+.show-card{
+    padding-left: 0;
+    padding-right: 0;
 }
